[gd_scene load_steps=3 format=3 uid="uid://b2ftn5sr37k2r"]

[ext_resource type="Script" path="res://scenes/board.gd" id="1_j0t46"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tdyki"]
size = Vector2(620, 579.5)

[node name="Board" type="Node2D"]
script = ExtResource("1_j0t46")

[node name="DebugBgLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="DebugBgLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.298039)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Area2D" type="Area2D" parent="."]

[node name="PlayArea" type="ColorRect" parent="Area2D"]
unique_name_in_owner = true
visible = false
modulate = Color(0.337255, 0.4, 0.00784314, 0.501961)
offset_left = -37.0
offset_top = -18.0
offset_right = 557.0
offset_bottom = 559.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(260, 268.75)
shape = SubResource("RectangleShape2D_tdyki")

[node name="MarkerCardBottom1" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(117, 795)

[node name="MarkerCardBottom2" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(264, 795)

[node name="MarkerCardBottom3" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(411, 795)

[node name="MarkerCardRight" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(640, 278)

[node name="MarkerCardTop" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(291, -72)

[node name="MarkerCardLeft" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-102, 282)

[node name="MarkerCenter" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(264, 346)

[node name="MarkerBottom" type="Marker2D" parent="MarkerCenter"]
unique_name_in_owner = true
position = Vector2(0, 165)

[node name="MarkerTop" type="Marker2D" parent="MarkerCenter"]
unique_name_in_owner = true
position = Vector2(1.52588e-05, -165)

[node name="MarkerLeft" type="Marker2D" parent="MarkerCenter"]
unique_name_in_owner = true
position = Vector2(-145, 0)

[node name="MarkerRight" type="Marker2D" parent="MarkerCenter"]
unique_name_in_owner = true
position = Vector2(145, 0)

[node name="RestartButton" type="Button" parent="MarkerCenter"]
unique_name_in_owner = true
z_index = 1000
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -181.0
offset_top = -58.0
offset_right = 181.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(181, 58)
theme_override_font_sizes/font_size = 70
disabled = true
text = "RESTART"

[node name="QuitButton" type="Button" parent="MarkerCenter"]
offset_left = 91.0
offset_top = 572.0
offset_right = 146.0
offset_bottom = 618.0
text = "Quit"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RoundsLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_right = 77.0
offset_bottom = 62.0
pivot_offset = Vector2(11, 33)
theme_override_font_sizes/font_size = 40
text = "???"

[node name="WinnerLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -249.0
offset_top = 59.0
offset_bottom = 121.0
grow_horizontal = 0
pivot_offset = Vector2(234, 36)
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 40
text = "Who wins??"
horizontal_alignment = 2

[node name="PlayerLabel" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -249.0
offset_bottom = 62.0
grow_horizontal = 0
pivot_offset = Vector2(234, 36)
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 40
text = "Who am I??"
horizontal_alignment = 2

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="pressed" from="MarkerCenter/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarkerCenter/QuitButton" to="." method="_on_quit_button_pressed"]
